--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background: #fffaef;
+  background: #DDDDDD;
   color: #000;
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
@@ -40,15 +40,24 @@ a:hover {
   margin: 0 auto;
   margin-top: 40px;
   padding: 20px 40px;
-  background: white;
-  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+  background: #fab7b7;
+  box-shadow: 5px 5px 25px #3b6978;
   text-align: center;
 }
+
+.bc84a9ac{ 
+  
+  background: #84a9ac;
+  box-shadow: 5px 5px 25px #3b6978;
+  text-align: center;
+}
+
+
 
 .avatar {
   width: 200px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 25%;
   box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
 }
 
